[2단계 - 출석 다시 구현하기] 띠용(주용은) 미션 제출합니다.  (#121)
* initial commit : 기존 코드 삭제

* docs(README.md) : 요구사항 정리

* RED) test(domain) : AttendanceStatus

-월요일 정상 출석 상황

* GREEN) feat(domain) : AttendanceStatus

- 요일별 정상 출석 상태 반환 기능 작성

* GREEN) test(domain) : AttendanceStatus

- 월요일 각 상황별 테스트 추가
 - 출석, 지각, 결석

* GREEN) test(domain) : AttendanceStatus

- 화,수,목,금요일 각 상황별 테스트 추가
 - 출석, 지각, 결석

* RED) test(domain) : AttendanceStatus

- 주말 출석 시도 테스트 추가

* GREEN) feat(domain) : AttendanceStatus

- 주말 및 공휴일 출석 검증

* GREEN) test(domain) : AttendanceStatus

- 크리스마스 검증 테스트 추가

* RED) test(domain) : AttendanceStatus

- 휴장시간 출석 시도 검증 테스트

* GREEN) feat(domain) : AttendanceStatus

- 휴장시간 출석 시도 검증 기능

* refactor(test) : test 파일 rename

- AttendanceStatusTest

* RED) test(domain) : Crew, Attendance

- 크루별 출석 기록 저장 테스트 작성

* GREEN) feat(domain) : Crew, Attendance

- 크루, 출석 도메인 생성
- 크루별 출석 기록 저장 기능 작성

* RED) test(domain) : Crew, Attendance

- 출석 기록 오류 테스트
 - 이미 출석한 경우 재출석 시도

* GREEN) feat(domain) : Crew, Attendance

- 출석 기록 오류 작성
 - 이미 출석한 경우 재출석 시도

* RED) test(domain) : Crew, Attendance

- 출석 상태별 갯수 반환 테스트 작성

* GREEN) feat(domain) : Crew, Attendance

- 출석 상태별 갯수 반환 기능 작성

* RED) Tet(domain) : Crew, Attendance

- 출석하지 않은 날을 결석으로 간주 테스트

* RED) Tet(domain) : Crew, Attendance

- 출석하지 않은 날을 결석으로 간주 테스트

* GREEN) feat(domain) : Crew, AttendanceStatus

- 출석하지 않은 날을 결석으로 간주 테스트

* RED) test(domain) : Crew, Penalty

- 크루 패널티 상태 체크 테스트
 - 경고
 - 면담
 - 제적

* RED) test(domain) : Crew, Penalty

- 테스트 추가
 - 패널티 X
 - 지각 3회는 결석 1회로 간주

* GREEN) feat(domain) : Crew, Penalty

- 각 패널티 상태값 확인
- 지각 3회는 결석 1회로 간주

* docs(attendances.csv) : 출석 기록 문서 추가

* refactor(test) : Rename Test Class

- CrewTest

* feat(controller) : 컨트롤러 추가

- AttendanceSystem

* feat(app) : 메인 클래스 추가

* feat(view) : view 추가

- OutputView

* feat(domain) : AllCrew

- Crew 리스트 클래스 생성

* docs(attendances.csv) : 출석 기록 문서 수정

- 입력 형식 조정

* feat(controller) : 컨트롤러 기능 추가

- 출석 확인 기능 구현

* feat(domain) : Crew

- 같은 이름 확인 기능

* feat(view) : User